Use history.pushState to navigate between URI.

--- a/example/ldp/index.html
+++ b/example/ldp/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>stample.rww.io: Index of /</title>
     <base href="http://stample.rww.io/">
-	<!--script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.js"></script-->
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.js"></script>
 	<link rel="stylesheet" href="/common/css/blueprint.css" type="text/css" media="screen, projection" />
     <link rel="stylesheet" href="/common/css/common.css" type="text/css" media="screen, projection" />
     <link rel="stylesheet" href="/common/css/font-awesome.min.css" type="text/css" media="screen, projection" />
@@ -133,11 +133,8 @@
         <th colspan="3">Actions</th>
     </tr>
 </thead>
-<tbody class="lines">
-
-  <tr>
-    <td class="filename"><a href="/">/</a></td><td>-</td><td>Root</td><td>2013-09-05 11:07:04 GMT</td></td><td class="options"></td><td class="options"><a href="#" onclick="wac.edit('/', '/');"><img class="actions" src="/common/images/22/acl.png" title="Access Control" /></a> </td><td class="options"><a href="#" onclick="cloud.rm('/');"><img class="actions" src="/common/images/22/delete.png" title="Delete" /></a></td></tr><tr>
-  <td class="filename"><a href="2013/" onclick="clickDir(event, this.href)" >2013/</a></td><td>-</td><td>Directory</td><td>2013-09-05 11:08:00 GMT</td></td><td class="options"></td><td class="options"><a href="#" onclick="wac.edit('/', '2013/');"><img class="actions" src="/common/images/22/acl.png" title="Access Control" /></a> </td><td class="options"><a href="#" onclick="cloud.rm('2013/');"><img class="actions" src="/common/images/22/delete.png" title="Delete" /></a></td></tr></tbody>
+	<tbody class="lines">
+    </tbody>
 </table>
 
 </div>
@@ -275,22 +272,6 @@ with 1 query in 0.0002s
 </div>
 <div class="clear"></div>
 </div>
-
-<!-- Piwik
-<script type="text/javascript">
-  var _paq = _paq || [];
-  _paq.push(["trackPageView"]);
-  _paq.push(["enableLinkTracking"]);
-
-  (function() {
-    var u=(("https:" == document.location.protocol) ? "https" : "http") + "://my-profile.eu/piwik/";
-    _paq.push(["setTrackerUrl", u+"piwik.php"]);
-    _paq.push(["setSiteId", "4"]);
-    var d=document, g=d.createElement("script"), s=d.getElementsByTagName("script")[0]; g.type="text/javascript";
-    g.defer=true; g.async=true; g.src=u+"piwik.js"; s.parentNode.insertBefore(g,s);
-  })();
-</script>
-<!-- End Piwik Code -->
 
 </body>
 </html>
