--- a/example/people/social_book.html
+++ b/example/people/social_book.html
@@ -17,12 +17,11 @@
 	<script src="../../dist/rdflib.js" type="text/javascript"></script>
 	<script src="../../dist/rdflib-rdfa.js" type="text/javascript"></script>
 	<script type="text/javascript" src="social_book.js"></script>
-	<script type="text/javascript" src="../../spin.min.js"></script>
+	<script type="text/javascript" src="spin.min.js"></script>
 
 </head>
 
 <body>
-
 
 <div id="topbar">
 	<div class="wrapper">
@@ -32,8 +31,6 @@
 		</div>
 	</div>
 </div>
-
-
 
 <div id="site_wrapper">
 	<div id="friends_panels">
