catch exceptions for missing info in SPARQL

--- a/example/ldp/index.html
+++ b/example/ldp/index.html
@@ -14,7 +14,7 @@
 	<script src="/common/js/prototype.js" type="text/javascript"></script>
     <script src="/common/js/common.js" type="text/javascript"></script>
     <script type="text/javascript">
-    cloud.init({request_base:'https://stample.rww.io',request_url:'/',user:'dns:90.24.245.239'});
+    cloud.init({request_base:'https://localhost:8443/2013/',request_url:'/2013/'});
     </script>
 </head>
 <body>
