--- a/pointedgraph/exemples/getFriends.html
+++ b/pointedgraph/exemples/getFriends.html
@@ -7,8 +7,8 @@
     <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/q.js/0.9.2/q.js"></script>
 
-    <script src="../dist/rdflib-stample.js"></script>
-    <script src="../dist/rdflib-stample-pg-extension.js"></script>
+    <script src="../../dist/rdflib-stample.js"></script>
+    <script src="../../dist/rdflib-stample-pg-extension.js"></script>
 
 </head>
 <body>
@@ -17,7 +17,7 @@
     var FOAF = $rdf.Namespace("http://xmlns.com/foaf/0.1/");
 
     // proxy
-    $rdf.Fetcher.fetcherWithPromiseCrossSiteProxyTemplate = "http://localhost:9000/srv/cors?url=";
+    $rdf.Fetcher.fetcherWithPromiseCrossSiteProxyTemplate = "http://data.fm/proxy?uri=";
 
     var store = new $rdf.IndexedFormula();
     // this makes "store.fetcher" variable available (same as RDFLib)
@@ -49,14 +49,21 @@
 
             remoteFriendPgPromise.then(function(remoteFriendPg) {
                 // Finally we can print the name of all Henry's friends
-                var literalNode = remoteFriendPg.relFirst(FOAF("name")).pointer;
-                console.log("Frient name node: " + literalNode);
+                var friendName = remoteFriendPg.relFirst(FOAF("name")).pointer.toString();;
+                $("#friendList").append("<li>"+friendName+"</li>")
+                console.log("Frient name node: " + friendName);
             });
 
         });
 
     });
 </script>
+
+<div>
+    <ul id="friendList">
+
+    </ul>
+</div>
 
 </body>
 </html>
