--- a/pointedgraph/exemples/getFriends.html
+++ b/pointedgraph/exemples/getFriends.html
@@ -2,61 +2,62 @@
 <html>
 <head>
     <title></title>
-
     <script src="http://code.jquery.com/jquery-1.11.0.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/q.js/0.9.2/q.js"></script>
-
     <script src="../../dist/rdflib-stample.js"></script>
     <script src="../../dist/rdflib-stample-pg-extension.js"></script>
-
 </head>
 <body>
 
 <script>
     var FOAF = $rdf.Namespace("http://xmlns.com/foaf/0.1/");
 
-    // proxy
     $rdf.Fetcher.fetcherWithPromiseCrossSiteProxyTemplate = "http://data.fm/proxy?uri=";
 
-    var store = new $rdf.IndexedFormula();
-    // this makes "store.fetcher" variable available (same as RDFLib)
-    $rdf.fetcher(store, 10000, true);
+    var fetcherTimeout = 3000;
+    var store = $rdf.PG.createNewStore(fetcherTimeout);
 
-    // You can use an URL with or without a fragment, it will give you different pointer graphs with the same underlying document/namedGraph.
+    // You can use an URL with or without a fragment, it will give you different
+    // pointer graphs with the same underlying document/namedGraph.
     var henryFoafProfileUrl = "http://bblfish.net/people/henry/card#me";
 
-    // You can fetch it, it returns a Q promise (to avoid JS callback hell)
-    var pointedGraphPromise = store.fetcher.fetch("http://bblfish.net/people/henry/card#me");
-
-    // You can register code that will be triggered when the pointedGraph is available
-    pointedGraphPromise.then(function(henryPg) {
-        console.log("Retrieved henry PG: ",henryPg.printSummary());
-
-        // You can get the list of pointed graphs that points to henry's friend in the local document
-        var localHenryFriendPgs = henryPg.rel( FOAF("knows") );
-        console.log("Henry's friend number = ",localHenryFriendPgs.length);
-
-        _.each(localHenryFriendPgs, function(localHenryFriendPg) {
-
-            // Generally, each foaf profile is described in separate http resources / rdf graphs.
-            // So you can't get much data by staying in the local graph,
-            // you have to jump to the remote graph that is hosted at your friend's foaf profile URL.
-            // For that you can use jumpAsync: this will fetch the remote URL
-            // and return a promise of pointed graph. The PG pointer will be the same node
-            // (the friend url symbol) but the underlying document will be changed
-            var remoteFriendPgPromise = localHenryFriendPg.jumpAsync();
-
-            remoteFriendPgPromise.then(function(remoteFriendPg) {
-                // Finally we can print the name of all Henry's friends
-                var friendName = remoteFriendPg.relFirst(FOAF("name")).pointer.toString();;
-                $("#friendList").append("<li>"+friendName+"</li>")
-                console.log("Frient name node: " + friendName);
+    // You can fetch it, it returns a Q promise of pointed graph.
+    // The pointer will be Henry's foaf:Person subject
+    store.fetcher.fetch(henryFoafProfileUrl)
+            .then(function(henryPg) {
+                printPersonFriendNames(henryPg);
+            })
+            .fail(function(fetchError) {
+                console.warn("Can't fetch the pointed graph at",henryFoafProfileUrl,fetchError);
             });
 
-        });
 
-    });
+    function printPersonFriendNames(personPg) {
+        // You can get the list of pointed graphs that points to henry's friend in the local document
+        var localFriendPgs = personPg.rel( FOAF("knows") );
+        _.each(localFriendPgs, function(localFriendPg) {
+            printFriendName(localFriendPg);
+        });
+    }
+
+    function printFriendName(localFriendPg) {
+        // Generally, each foaf profile is described in separate http resources / rdf graphs.
+        // So you can't get much data by staying in the local graph,
+        // you have to jump to the remote graph that is hosted at your friend's foaf profile URL.
+        // For that you can use jumpAsync: this will fetch the remote URL
+        // and return a promise of pointed graph. The PG pointer will be the same node
+        // (the friend url symbol) but the underlying document will be changed
+        localFriendPg.jumpAsync()
+                .then(function(remoteFriendPg) {
+                    // Finally we can print the name of all Henry's friends
+                    var friendName = remoteFriendPg.relFirst(FOAF("name")).pointer.toString();;
+                    $("#friendList").append("<li>"+friendName+"</li>")
+                }).fail(function (jumpError) {
+                    console.warn("Error during jump from ",localFriendPg.printSummary(),jumpError);
+                });
+    }
+
 </script>
 
 <div>
