--- a/pointedgraph/exemples/getFriendsRx.html
+++ b/pointedgraph/exemples/getFriendsRx.html
@@ -2,52 +2,44 @@
 <html>
 <head>
     <title></title>
-
     <script src="http://code.jquery.com/jquery-1.11.0.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/q.js/0.9.2/q.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/rxjs/2.2.10/rx.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/rxjs/2.2.10/rx.async.js"></script>
-
-
     <script src="../../dist/rdflib-stample.js"></script>
     <script src="../../dist/rdflib-stample-pg-extension.js"></script>
-
 </head>
 <body>
 
 <script>
     var FOAF = $rdf.Namespace("http://xmlns.com/foaf/0.1/");
 
-    // proxy
     $rdf.Fetcher.fetcherWithPromiseCrossSiteProxyTemplate = "http://data.fm/proxy?uri=";
 
-    var store = new $rdf.IndexedFormula();
-    // this makes "store.fetcher" variable available (same as RDFLib)
-    $rdf.fetcher(store, 10000, true);
-
-    // You can use an URL with or without a fragment, it will give you different pointer graphs with the same underlying document/namedGraph.
+    var fetcherTimeout = 3000;
+    var store = $rdf.PG.createNewStore(fetcherTimeout);
     var henryFoafProfileUrl = "http://bblfish.net/people/henry/card#me";
 
-    // You can fetch it, it returns a Q promise (to avoid JS callback hell)
-    var pointedGraphPromise = store.fetcher.fetch("http://bblfish.net/people/henry/card#me");
+    store.fetcher.fetch(henryFoafProfileUrl)
+            .then(function(henryPg) {
+                printFriendName(henryPg);
+            })
+            .fail(function(fetchError) {
+                console.warn("Can't fetch the pointed graph at",henryFoafProfileUrl,fetchError);
+            });
 
-    // You can register code that will be triggered when the pointedGraph is available
-    pointedGraphPromise.then(function(henryPg) {
-
-        henryPg.jumpRelObservable( FOAF("knows") )
-                .map(function(remoteFriendPg) {
-                    return remoteFriendPg.relFirst(FOAF("name"));
-                })
-                .filter(function(maybeRemoteFriendPgName) {
-                    return typeof maybeRemoteFriendPgName != 'undefined';
+    function printFriendName(personPg) {
+        personPg.jumpRelObservable( FOAF("knows") )
+                .flatMap(function(remoteFriendPg) {
+                    return Rx.Observable.fromArray( remoteFriendPg.rel(FOAF("name")) );
                 })
                 .subscribe(function(remoteFriendPgName) {
                     var friendName = remoteFriendPgName.pointer.toString();
                     $("#friendList").append("<li>"+friendName+"</li>")
                 });
+    }
 
-    });
 </script>
 
 <div>
