--- a/pointedgraph/exemples/getFriends.html
+++ b/pointedgraph/exemples/getFriends.html
@@ -5,8 +5,8 @@
     <script src="http://code.jquery.com/jquery-1.11.0.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/q.js/0.9.2/q.js"></script>
-    <script src="../../dist/rdflib-stample.js"></script>
-    <script src="../../dist/rdflib-stample-pg-extension.js"></script>
+    <script src="../../releases/0.1.0/rdflib-stample-0.1.0.js"></script>
+    <script src="../../releases/0.1.0/rdflib-stample-pg-extension-0.1.0.js"></script>
 </head>
 <body>
 
