--- a/pointedgraph/exemples/getFriendsRequire.html
+++ b/pointedgraph/exemples/getFriendsRequire.html
@@ -6,15 +6,14 @@
 </head>
 <body>
 
-
 <script>
     require.config({
         paths: {
             "jquery": "http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery",
             "underscore":"http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min",
             "q": "http://cdnjs.cloudflare.com/ajax/libs/q.js/0.9.2/q",
-            "rdflib": "../../dist/rdflib-stample",
-            "rdflib-pg-extension": "../../dist/rdflib-stample-pg-extension"
+            "rdflib": "../../releases/0.1.0/rdflib-stample-0.1.0",
+            "rdflib-pg-extension": "../../releases/0.1.0/rdflib-stample-pg-extension-0.1.0"
         },
 
         shim: {
