--- a/pointedgraph/exemples/getFriends.html
+++ b/pointedgraph/exemples/getFriends.html
@@ -13,7 +13,8 @@
 <script>
     var FOAF = $rdf.Namespace("http://xmlns.com/foaf/0.1/");
 
-    $rdf.Fetcher.fetcherWithPromiseCrossSiteProxyTemplate = "http://data.fm/proxy?uri=";
+    $rdf.Fetcher.fetcherWithPromiseCrossSiteProxyTemplate = "https://www.stample.io/srv/cors?url=";
+    //$rdf.Fetcher.fetcherWithPromiseCrossSiteProxyTemplate = "http://data.fm/proxy?uri=";
 
     var fetcherTimeout = 3000;
     var store = $rdf.PG.createNewStore(fetcherTimeout);
