--- a/pointedgraph/exemples/getFriendsFriendsRx.html
+++ b/pointedgraph/exemples/getFriendsFriendsRx.html
@@ -5,7 +5,8 @@
     <script src="http://code.jquery.com/jquery-1.11.0.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/q.js/0.9.2/q.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/rxjs/2.2.10/rx.lite.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/rxjs/2.2.10/rx.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/rxjs/2.2.10/rx.binding.js"></script>
 
     <script src="../../releases/0.1.0/rdflib-stample-0.1.0.js"></script>
     <script src="../pg.js"></script>
@@ -35,23 +36,25 @@
             });
 
     function printFriendFriendName(personPg) {
-        var personFriendFriendNameStream = personPg.jumpRelPathObservable([FOAF("knows"),FOAF("knows"),FOAF("name")]);
+        var personFriendFriendNameStream = personPg.followPath( [FOAF("knows"), FOAF("knows"), FOAF("name") ]);
+        handleNameStream(personFriendFriendNameStream);
+    }
 
-        personFriendFriendNameStream.subscribe(
-                function(remoteFriendFriendPgName) {
-                    var friendFriendName = remoteFriendFriendPgName.pointer.toString();
-                    $("#friendList").append("<li>"+friendFriendName+"</li>")
+    function handleNameStream(nameStream) {
+        nameStream.subscribe(
+                function(namePg) {
+                    var friendFriendName = namePg.pointer.toString();
+                    $("#friendList").append("<li>"+friendFriendName+" ("+namePg.getCurrentDocumentUrl()+")</li>")
                     friendCounter++;
                     $("#counter").html(friendCounter);
                 },
                 function(error) {
-                     console.warn("Unexpected end of stream",error);
+                    console.error("Unexpected end of stream",error, error.stack);
                 },
                 function() {
                     $("#end").html(" -> End");
                 }
         );
-
     }
 
 </script>
